# fix size modal suggest form  on mobile screen

--- a/src/esn.calendar.libs/app/components/event/form/modals/edit-instance-or-series-modal.less
+++ b/src/esn.calendar.libs/app/components/event/form/modals/edit-instance-or-series-modal.less
@@ -3,4 +3,13 @@
     font-size: 1.1em;
     font-weight: 400;
   }
+  .suggest-form {
+    .modal-dialog {
+      // Position of modal dialog is absolute by default (causes display issues on small screens)
+      position: relative !important;
+      width: auto;
+      max-width: 600px;
+      margin: 12px;
+    }
+  }
 }
